# ani-core

./: Cargo.toml  README.md  schema.sql
src/: lib.rs
src/database/: mod.rs  schema.rs
src/database/queries/: anime.rs  episodes.rs  metadata.rs  mod.rs  search.rs
src/models/: anime.rs  episode.rs  mod.rs
src/utils/: config.rs
