[package]
name = "ani-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.95"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
regex = "1.11.1"
